<resources>
    <string name="app_name">LecturerAppointment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="card_label">card label</string>
    <string name="awesome_banner"> awesome banner</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="set_start_time"> Start time</string>
    <string name="set_end_time">End time</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="make_booking">Welcome to Awesome Lecturer Bookings</string>
    <string name="select_course">Select course</string>
    <string name="exit_label">Exit</string>
    <string name="add_courses">Add Course</string>
    <string name="time_table_text">Slot</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="save">Save</string>
    <string name="display_name">Lecturer Appointment</string>
    <string name="new_slot">New slot</string>
    <string name="forgot_passowrd">Forgot password</string>
    <string name="add_new_course">Add new course</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="institution_email">Institution email</string>
    <string name="preferred_name">Preferred name</string>
    <string name="select_day">Select day</string>
    <string name="week_day">WeekDay</string>
    <string name="login">Login</string>
    <string-array name="courses_registered">
        <item>Select course</item>
        <item>DSO24BT</item>
        <item>TPG201T</item>
        <item>AOP216D</item>
    </string-array>

    <string-array name="week_days">
        <item>Select day</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="title_activity_add_time_table_slots">AddTimeTableSlots</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="create">Create</string>
    <string name="view">View</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lecturer_add_slots">LecturerAddSlots</string>
    <string name="enter_course_code">Enter course code</string>
    <string name="bannerstr">banners</string>
    <string name="slot_label">slot label</string>
    <string name="add">add new slot</string>
    <string name="email">enter email</string>
    <string name="password">enter password</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_b">Save</string>
    <string name="register_view">register</string>
    <string name="awesomeb">awesome</string>
    <string name="reserve">Reserve</string>
</resources>