<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awesomebanner2" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="31dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/forgot_assword"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="8dp"
        android:text="@string/register_view"
        app:layout_constraintBottom_toBottomOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/awesomebanner2"
        android:layout_width="0dp"
        android:layout_height="141dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="38dp"
        android:contentDescription="@string/awesomeb"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/awesomebanner1" />

    <TextView
        android:id="@+id/forgot_assword"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginBottom="66dp"
        android:text="@string/forgot_passowrd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login" />
</androidx.constraintlayout.widget.ConstraintLayout>