<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/preferred_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edit_email_inst"
        app:layout_constraintEnd_toEndOf="@+id/create_password"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="@+id/create_password"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edit_email_inst"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:hint="@string/institution_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/create_password"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />
    <EditText
        android:id="@+id/create_password"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/confirm_passowrd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_inst" />

    <EditText
        android:id="@+id/confirm_passowrd"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="97dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="120dp"
        android:text="@string/save_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_passowrd" />
</androidx.constraintlayout.widget.ConstraintLayout>