<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCoursesActivity">

    <TextView
        android:id="@+id/text_view_add_course"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="26dp"
        android:text="@string/add_courses"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_course_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/enter_course_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_course_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_button" />

    <EditText
        android:id="@+id/edit_text_course_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="106dp"
        android:ems="10"
        android:hint="@string/enter_course_code"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/button_save_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_course_name" />

    <Button
        android:id="@+id/button_save_course"
        android:layout_width="127dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="134dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_course_code" />

    <ImageButton
        android:id="@+id/add_image_button"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/add_button_background"
        android:contentDescription="@string/add_new_course"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_course_name"
        app:layout_constraintStart_toStartOf="@+id/text_view_add_course"
        app:layout_constraintTop_toBottomOf="@+id/text_view_add_course"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>