<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/start_time_label"
            android:layout_width="128dp"
            android:layout_height="62dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="163dp"
            android:text="@string/start_time"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/end_time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slot_label" />

        <TextView
            android:id="@+id/end_time_label"
            android:layout_width="128dp"
            android:layout_height="62dp"
            android:layout_marginEnd="27dp"
            android:text="@string/end_time"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/start_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_time_label" />

        <TextView
            android:id="@+id/slot_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="52dp"
            android:text="@string/slot_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/start_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>